--- a/index.html
+++ b/index.html
@@ -25,9 +25,67 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+
+    </header>
     <!-- Root -->
     <div id="root">
+        <div class="container">
+            <div class="big-box mt-5">
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Cerca...">
+                </div>
 
+                <!-- List -->
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                An item
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                A second item
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                A third item
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                A fourth item
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                And a fifth one
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+                <div class="input-group my-3">
+                    <input type="text" class="form-control" placeholder="Aggiungi task">
+                    <button class="btn btn-outline-success" type="button">Aggiungi</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
