--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     <li v-for="task in list" class="list-group-item">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="">
-                            <label class="form-check-label" for="flexCheckDefault">
+                            <label class="form-check-label" :class="{'text-decoration-line-through' : task.done}"
+                                for="flexCheckDefault">
                                 {{task.text}}
                             </label>
                         </div>
