--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <!-- Vue JS -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
@@ -39,13 +42,21 @@
 
                 <!-- List -->
                 <ul class="list-group">
+
+                    <!-- Create list item for every element in array `list` -->
                     <li v-for="task in list" class="list-group-item">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="">
-                            <label class="form-check-label" :class="{'text-decoration-line-through' : task.done}"
-                                for="flexCheckDefault">
-                                {{task.text}}
-                            </label>
+                        <div class="form-check d-flex justify-content-between align-items-center">
+                            <div>
+                                <input class="form-check-input" type="checkbox" value="">
+
+                                <!-- If task-done change class -->
+                                <label class="form-check-label" :class="{'text-decoration-line-through' : task.done}"
+                                    for="flexCheckDefault">
+                                    {{task.text}}
+                                </label>
+                            </div>
+                            <button @click="removeTask(task.id)" type="button" class="btn btn-danger"><i
+                                    class="bi bi-trash3"></i></button>
                         </div>
                     </li>
                 </ul>
