HTML - Added removeItem to delete button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     {{task.text}}
                                 </label>
                             </div>
-                            <button @click="removeTask(task.id)" type="button" class="btn btn-danger"><i
+                            <button @click="removeItem(task.id)" type="button" class="btn btn-danger"><i
                                     class="bi bi-trash3"></i></button>
                         </div>
                     </li>
