HTML - Added add icon button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </ul>
                 <div class="input-group my-3">
                     <input type="text" class="form-control" placeholder="Aggiungi task">
-                    <button class="btn btn-outline-success" type="button">Aggiungi</button>
+                    <button class="btn btn-success" type="button"><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
         </div>
