--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <!-- List -->
                 <ul class="list-group">
 
-                    <!-- Create list item for every element in array `list` -->
+                    <!-- Create list item for every element in `list` array  -->
                     <li v-for="task in list" class="list-group-item">
                         <div class="form-check d-flex justify-content-between align-items-center">
                             <div>
                                 <input class="form-check-input" type="checkbox" value="">
 
-                                <!-- If task-done change class -->
+                                <!-- If task-done, change class -->
                                 <label class="form-check-label" :class="{'text-decoration-line-through' : task.done}"
                                     for="flexCheckDefault">
                                     {{task.text}}
@@ -61,8 +61,9 @@
                     </li>
                 </ul>
                 <div class="input-group my-3">
-                    <input type="text" class="form-control" placeholder="Aggiungi task">
-                    <button class="btn btn-success" type="button"><i class="bi bi-plus-circle"></i></button>
+                    <input type="text" class="form-control" placeholder="Aggiungi task" v-model="newTask">
+                    <button @click="addTask(newTask)" class="btn btn-success" type="button"><i
+                            class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
         </div>
