--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <ul class="list-group">
 
                     <!-- Create list item for every element in `list` array  -->
-                    <li v-for="task in list" class="list-group-item" @click="toggleStats(task.id)">
+                    <li v-for="task in list" class="list-group-item">
                         <div class="form-check d-flex justify-content-between align-items-center">
                             <div>
                                 <input class="form-check-input" type="checkbox" v-model="task.done">
 
                                 <!-- If task-done, change class -->
                                 <label class="form-check-label" :class="{'text-decoration-line-through' : task.done}"
-                                    for="flexCheckDefault">
+                                    for="flexCheckDefault" @click="toggleStats(task.id)">
                                     {{task.text}}
                                 </label>
                             </div>
