--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <ul class="list-group">
 
                     <!-- Create list item for every element in `list` array  -->
-                    <li v-for="task in list" class="list-group-item">
+                    <li v-for="task in searchedList" class="list-group-item">
                         <div class="form-check d-flex justify-content-between align-items-center">
                             <div>
                                 <input class="form-check-input" type="checkbox" v-model="task.done">
